--- a/ottonova-client/package.json
+++ b/ottonova-client/package.json
@@ -5,7 +5,32 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "test": "vitest",
+    "coverage": "vitest run --coverage"
+  },
+  "jest": {
+    "collectCoverage": true,
+    "collectCoverageFrom": [
+      "**/*.{js,vue}",
+      "!**/node_modules/**"
+    ],
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "vue"
+    ],
+    "transform": {
+      ".*\\.(vue)$": "vue-jest"
+    },
+    "moduleNameMapper": {
+      "^@/(.*)$": "<rootDir>/src/$1"
+    }
+  },
+  "babel": {
+    "presets": [
+      "@babel/preset-env"
+    ]
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
@@ -13,21 +38,32 @@
     "@fortawesome/free-regular-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/vue-fontawesome": "^3.0.3",
+    "@vitejs/plugin-vue": "^4.2.3",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.1",
     "bootstrap-vue-next": "^0.10.1",
     "core-js": "^3.8.3",
+    "jest": "^29.6.2",
+    "jsdom": "^22.1.0",
     "vue": "^3.2.13",
     "vue3-carousel": "^0.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
+    "@babel/preset-env": "^7.22.10",
+    "@testing-library/vue": "^7.0.0",
+    "@vitest/coverage-v8": "^0.34.1",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "@vue/test-utils": "^2.4.1",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-jest": "^29.6.2",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "unplugin-vue-components": "^0.25.1",
+    "vitest": "^0.34.1"
   },
   "eslintConfig": {
     "root": true,
