--- a/server/package.json
+++ b/server/package.json
@@ -5,9 +5,11 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js",
-    "test": "jest"
+    "test": "jest",
+    "coverage": "jest --coverage"
   },
   "jest": {
+    "rootDir": "./",
     "testEnvironment": "node",
     "coveragePathIgnorePatterns": [
       "/node_modules/"
